# rusty-hole

./: Cargo.toml  README.md  config.toml  opencode.jsonc
src/: blocklist.rs  config.rs  dashboard.rs  dns.rs  lib.rs  main.rs  stats.rs
